order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Manager_Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email_Phone__c</fullName>
    <description>Order Form section 2: the Centellic account manager (quote Sales Rep) email / phone. Flow-stamped (see Account_Manager_Name__c for why not a formula).</description>
    <label>Account Manager Email/Phone (Display)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>