order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Name__c</fullName>
    <description>Order Form section 2: the Centellic account manager (quote Sales Rep) name. Flow-stamped text, NOT a formula - PROD Quote is at the 15-unique-relationship formula-spanning cap, so cross-object display values are stamped by Quote - Stamp Order Form Fields.</description>
    <label>Account Manager Name (Display)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>