order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Auto_Send_For_Signature__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_For_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Send For Signature</label>
    <type>Checkbox</type>
</CustomField>