order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Contact_Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email_Phone__c</fullName>
    <formula>IF(NOT(ISBLANK(Invoice_Contact__c)),
  Invoice_Contact__r.Email &amp; IF(ISBLANK(Invoice_Contact__r.Phone), "", " / " &amp; Invoice_Contact__r.Phone),
IF(NOT(ISBLANK(SBQQ__PrimaryContact__c)),
  SBQQ__PrimaryContact__r.Email &amp; IF(ISBLANK(SBQQ__PrimaryContact__r.Phone), "", " / " &amp; SBQQ__PrimaryContact__r.Phone),
""))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Billing/Invoice Contact Email and Phone</label>
    <type>Text</type>
</CustomField>