order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Contact_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name_Title__c</fullName>
    <formula>IF(NOT(ISBLANK(Invoice_Contact__c)),
  Invoice_Contact__r.FirstName &amp; " " &amp; Invoice_Contact__r.LastName &amp; IF(ISBLANK(Invoice_Contact__r.Title), "", ", " &amp; Invoice_Contact__r.Title),
IF(NOT(ISBLANK(SBQQ__PrimaryContact__c)),
  SBQQ__PrimaryContact__r.FirstName &amp; " " &amp; SBQQ__PrimaryContact__r.LastName &amp; IF(ISBLANK(SBQQ__PrimaryContact__r.Title), "", ", " &amp; SBQQ__PrimaryContact__r.Title),
""))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Billing/Invoice Contact Name and Title</label>
    <type>Text</type>
</CustomField>