order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Company_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Entity_Name__c</fullName>
    <label>Company Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>