order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Company_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Reg_Number__c</fullName>
    <label>Company Reg Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>