order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Company_Registered_Office__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Office__c</fullName>
    <label>Company Registered Office</label>
    <type>TextArea</type>
</CustomField>