order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Registration_Number__c</fullName>
    <formula>SBQQ__Account__r.Trade_Register_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Customer Registration Number</label>
    <type>Text</type>
</CustomField>