order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Date__c</fullName>
    <label>Customer Signed Date</label>
    <type>Date</type>
</CustomField>