order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_VAT_Number__c</fullName>
    <formula>SBQQ__Account__r.VAT_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Customer VAT Number</label>
    <type>Text</type>
</CustomField>