order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_VAT_Number_Captured__c.field-meta.xml
<CustomField>
    <fullName>Customer_VAT_Number_Captured__c</fullName>
    <label>Customer VAT Number (Captured)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>