order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Governing_Law_Text__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law_Text__c</fullName>
    <label>Governing Law Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>