order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Includes_API_Access__c.field-meta.xml
<CustomField>
    <fullName>Includes_API_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At least one quote line product includes API access. Recomputed on every quote save by the Quote - Stamp Terms flow; drives the conditional API Terms sentence on the Order Form.</description>
    <label>Includes API Access</label>
    <type>Checkbox</type>
</CustomField>