order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who receives invoices. Leave blank — the Order Form prints the Primary Contact. Set it only when invoices go to someone else (finance, accounts payable).</inlineHelpText>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Invoice Contact)</relationshipLabel>
    <relationshipName>Quotes5</relationshipName>
    <type>Lookup</type>
</CustomField>