order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_Contact_Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contact_Email_Phone__c</fullName>
    <formula>IF(ISBLANK(Legal_Notices_Contact__c), "", Legal_Notices_Contact__r.Email &amp; IF(ISBLANK(Legal_Notices_Contact__r.Phone), "", " / " &amp; Legal_Notices_Contact__r.Phone))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Legal/Notices Contact Email and Phone</label>
    <type>Text</type>
</CustomField>