order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_Contact_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contact_Name_Title__c</fullName>
    <formula>IF(ISBLANK(Legal_Notices_Contact__c), "", Legal_Notices_Contact__r.FirstName &amp; " " &amp; Legal_Notices_Contact__r.LastName &amp; IF(ISBLANK(Legal_Notices_Contact__r.Title), "", ", " &amp; Legal_Notices_Contact__r.Title))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Legal/Notices Contact Name and Title</label>
    <type>Text</type>
</CustomField>