order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_Notices_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notices_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Notices Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Legal Notices)</relationshipLabel>
    <relationshipName>Quotes_Legal_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>