order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Main_Contact_Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Email_Phone__c</fullName>
    <formula>IF(ISBLANK(SBQQ__PrimaryContact__c), "", SBQQ__PrimaryContact__r.Email &amp; IF(ISBLANK(SBQQ__PrimaryContact__r.Phone), "", " / " &amp; SBQQ__PrimaryContact__r.Phone))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Main/Commercial Contact Email and Phone</label>
    <type>Text</type>
</CustomField>