order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Main_Contact_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Name_Title__c</fullName>
    <formula>IF(ISBLANK(SBQQ__PrimaryContact__c), "", SBQQ__PrimaryContact__r.FirstName &amp; " " &amp; SBQQ__PrimaryContact__r.LastName &amp; IF(ISBLANK(SBQQ__PrimaryContact__r.Title), "", ", " &amp; SBQQ__PrimaryContact__r.Title))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Main/Commercial Contact Name and Title</label>
    <type>Text</type>
</CustomField>