order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_API_Terms_End__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_API_Terms_End__c</fullName>
    <description>Full stop after the API Terms link; blank when the quote has no API-access product.</description>
    <formula>IF(Includes_API_Access__c, '.', '')</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form API Terms End</label>
    <type>Text</type>
</CustomField>