order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_API_Terms_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_API_Terms_Sentence__c</fullName>
    <description>Conditional Order Form intro sentence: printed only when the quote includes an API-access product. The API Terms are Product-Specific Terms - additive to the governing General/Key Account Terms, scoped to the marked lines.</description>
    <formula>IF(Includes_API_Access__c, 'Products marked &quot;Includes API access&quot; are additionally subject to the Product-Specific Terms (API Terms) found at: https://www.centellic.com/product-specific-terms-api-terms/.', '')</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form API Terms Sentence</label>
    <type>Text</type>
</CustomField>