order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_API_Terms_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_API_Terms_URL__c</fullName>
    <description>API Terms URL for the Order Form intro anchor; blank when the quote has no API-access product so the hardcoded anchor renders nothing.</description>
    <formula>IF(Includes_API_Access__c, 'https://www.centellic.com/product-specific-terms-api-terms/', '')</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form API Terms URL</label>
    <type>Text</type>
</CustomField>