order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Brand_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Brand_Logo_URL__c</fullName>
    <description>Absolute URL of the brand logo the Order Form header prints (img src merge - must NEVER be blank on a rendered quote or the doc engine 400s; the stamp flow always writes at least the Centellic default). Lead brand = family of the quote's highest-value line, mapped via Order_Form_Brand_Logo__mdt.</description>
    <label>Order Form Brand Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>