order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Contributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped by Quote_Stamp_Order_Form_Fields on every save: true when any line is in a contributor product family (Expert Insight, Performance Data, Instruct Counsel, Advertising). Drives the Contributor Order Form default and its conditional sections.</description>
    <label>Order Form: contributor deal</label>
    <type>Checkbox</type>
</CustomField>