order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Effective_Date__c</fullName>
    <description>Effective date printed on the Contributor Order Form: the quote start date when set, otherwise the earliest line start (edition products).</description>
    <formula>BLANKVALUE(SBQQ__StartDate__c, Order_Form_Line_Term_Start__c)</formula>
    <label>Order Form: effective date</label>
    <type>Date</type>
</CustomField>