order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Has_Subs__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Has_Subs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped by Quote_Stamp_Order_Form_Fields on every save: true when any line is in a subscription product family. On the Contributor Order Form this prints the Licence terms block for cross-sold subscription lines.</description>
    <label>Order Form: has subscription lines</label>
    <type>Checkbox</type>
</CustomField>