order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Has_Time_Based__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Has_Time_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped by Quote_Stamp_Order_Form_Fields (20 Sep 2026): true when any line's product is Time-Based. On the Contributor Order Form the Term row then prints a period; an edition-only quote prints the span of its edition dates instead.</description>
    <label>Order Form: has time-based lines</label>
    <type>Checkbox</type>
</CustomField>