order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Line_Term_End__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Line_Term_End__c</fullName>
    <description>Stamped by Quote_Stamp_Order_Form_Fields: latest line end date (SUN Report date logic) across the quote.</description>
    <label>Order Form: latest line end</label>
    <type>Date</type>
</CustomField>