order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Line_Term_Start__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Line_Term_Start__c</fullName>
    <description>Stamped by Quote_Stamp_Order_Form_Fields: earliest line start date (SUN Report date logic) across the quote. Edition products carry no quote start date, so the Contributor Order Form takes its effective date from here.</description>
    <label>Order Form: earliest line start</label>
    <type>Date</type>
</CustomField>