order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_No_Names__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_No_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rep choice (Kam, 16 Sep 2026): tick to suppress named individuals (biography takers) in the Content column of the Contributor Order Form - the "No Names" document variant.</description>
    <inlineHelpText>Tick to leave named individuals off the Order Form (the "No Names" version).</inlineHelpText>
    <label>Order Form: no names</label>
    <type>Checkbox</type>
</CustomField>