order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Not_Legal_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Not_Legal_Monitor__c</fullName>
    <description>Inverse of Order Form: Legal Monitor deal. CPQ template sections can only be conditioned on a quote checkbox being TRUE (Conditional Print Field), so the standard terms sentence prints on this and the Legal Monitor variant on the other.</description>
    <formula>NOT(Order_Form_Legal_Monitor__c)</formula>
    <label>Order Form: not a Legal Monitor deal</label>
    <type>Checkbox</type>
</CustomField>