order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Not_Show_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Not_Show_Discount__c</fullName>
    <description>Inverse of Order Form: show discount. CPQ prints a template section only when a quote checkbox is TRUE, so the no-discount products table is conditioned on this and the discount table on the other.</description>
    <formula>NOT(Order_Form_Show_Discount__c)</formula>
    <label>Order Form: not show discount</label>
    <type>Checkbox</type>
</CustomField>