order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Old_Terms_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Old_Terms_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped by Quote_Stamp_Order_Form_Fields on contributor quotes (19 Sep 2026, Kam): true when Special Terms name the old contributor terms ("Contributor Content Terms" / "Contributor Terms and Conditions") or run past 3,000 characters, i.e. a pasted terms document. The Contributor Order Form sits under the published Contribution Terms, so both send flows refuse to send until Special Terms are cleaned up.</description>
    <label>Order Form: old terms in Special Terms</label>
    <type>Checkbox</type>
</CustomField>