order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_PO_Req_No_Label__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_PO_Req_No_Label__c</fullName>
    <description>Visible label next to the No radio; blank when the quote already holds a PO.</description>
    <formula>IF(ISBLANK(PO_Number__c), "No", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form PO Required No Label</label>
    <type>Text</type>
</CustomField>