order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_PO_Req_No_Tag__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_PO_Req_No_Tag__c</fullName>
    <description>Adobe required radio tag (value No) for the PO-required signer question - emitted only when PO_Number__c is blank.</description>
    <formula>IF(ISBLANK(PO_Number__c), "{{*PO_Required_es_:signer1:radio(No)}}", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form PO Required No Tag</label>
    <type>Text</type>
</CustomField>