order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_PO_Req_Yes_Label__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_PO_Req_Yes_Label__c</fullName>
    <description>Visible label next to the Yes radio; when the quote already holds a PO it prints the implicit answer; when the Account is flagged PO Required it prints the credit-control-driven answer (no radios).</description>
    <formula>IF(NOT(ISBLANK(PO_Number__c)), "Yes (PO number below)", IF(TEXT(SBQQ__Account__r.PO_Required__c) = "Yes", "Yes - your organisation requires a PO on invoices", "Yes"))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form PO Required Yes Label</label>
    <type>Text</type>
</CustomField>