order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_PO_Req_Yes_Tag__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_PO_Req_Yes_Tag__c</fullName>
    <description>Adobe required radio tag (value Yes) for the signer question "Does your organisation require a PO number on invoices?" - emitted only when PO_Number__c is blank AND the Account is not flagged PO Required (flagged accounts skip the question - the PO box is unconditionally mandatory).</description>
    <formula>IF(ISBLANK(PO_Number__c), IF(TEXT(SBQQ__Account__r.PO_Required__c) = "Yes", "", "{{*PO_Required_es_:signer1:radio(Yes)}}"), "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form PO Required Yes Tag</label>
    <type>Text</type>
</CustomField>