order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_PO_Tag__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_PO_Tag__c</fullName>
    <description>Emits the Adobe Sign signer-fillable PO text tag ONLY when the quote has no PO number. Since 2026-08-22 the field is REQUIRED and shown only when the signer answers Yes to the PO-required question (showif). When PO_Number__c is filled, the document prints the value as plain text instead and this field is blank.</description>
    <formula>IF(ISBLANK(PO_Number__c), "{{*PO_Number_es_:signer1:showif(PO_Required=Yes)}}", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form PO Tag</label>
    <type>Text</type>
</CustomField>