order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Scoped__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Scoped__c</fullName>
    <description>True when the quote&apos;s default document template is the Subscription Order Form named in the Order Form Adobe Settings custom setting (i.e. the stamp flow judged this quote in Order Form scope). Used to hide legacy send paths (Adobe Sign for CPQ button) on in-scope quotes so the only route is Send for Signature. Self-retiring: clear the setting and it is false everywhere.</description>
    <formula>AND(
  NOT(ISBLANK($Setup.Order_Form_Adobe_Settings__c.Default_Template_Id__c)),
  NOT(ISBLANK(SBQQ__DefaultTemplate__c)),
  CASESAFEID(SBQQ__DefaultTemplate__c) = $Setup.Order_Form_Adobe_Settings__c.Default_Template_Id__c
)</formula>
    <inlineHelpText>Ticked when this quote is in Order Form scope (its default template is the Subscription Order Form). In-scope quotes must be sent with Send for Signature.</inlineHelpText>
    <label>Order Form Scoped</label>
    <type>Checkbox</type>
</CustomField>