order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Show_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Show_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rep choice (Kam, 16 Sep 2026): tick to print List price and Discount columns on the Contributor Order Form products table. Off by default; the table then prints the net fee only, as the Subscription Order Form does.</description>
    <inlineHelpText>Tick to show list price and discount columns on the Order Form. Leave off to print the net fee only.</inlineHelpText>
    <label>Order Form: show discount</label>
    <type>Checkbox</type>
</CustomField>