order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Term_End__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Term_End__c</fullName>
    <formula>BLANKVALUE(SBQQ__EndDate__c, ADDMONTHS(SBQQ__StartDate__c, BLANKVALUE(SBQQ__SubscriptionTerm__c, 12)) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form Term End</label>
    <type>Date</type>
</CustomField>