order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Term_End_Display__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Term_End_Display__c</fullName>
    <description>Term end printed on the Contributor Order Form: the later of the subscription term end and the latest line end, so a cross-sold edition running past the subscription year is covered.</description>
    <formula>IF(ISBLANK(Order_Form_Term_End__c), Order_Form_Line_Term_End__c, IF(AND(NOT(ISBLANK(Order_Form_Line_Term_End__c)), Order_Form_Line_Term_End__c &gt; Order_Form_Term_End__c), Order_Form_Line_Term_End__c, Order_Form_Term_End__c))</formula>
    <label>Order Form: term end (display)</label>
    <type>Date</type>
</CustomField>