order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Term_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Term_Text__c</fullName>
    <description>Contributor Order Form Term row, stamped by Quote_Stamp_Order_Form_Fields (20 Sep 2026): a period ("16/08/2026 to 15/08/2027") when any line is time-based, otherwise the span of the edition dates, or a single date when every edition falls on one.</description>
    <label>Order Form: term text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>