order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Terms_Label__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Terms_Label__c</fullName>
    <description>Printed terms name: the stamped Terms_Label__c, falling back to the standard terms for quotes not yet saved since the terms stamping went live.</description>
    <formula>BLANKVALUE(Terms_Label__c, "General Subscription Terms of Business")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form Terms Label (Display)</label>
    <type>Text</type>
</CustomField>