order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_Terms_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Terms_URL__c</fullName>
    <description>Printed terms URL: the stamped Terms_URL__c, falling back to the standard terms URL.</description>
    <formula>BLANKVALUE(Terms_URL__c, "https://www.centellic.com/general-subscription-terms-of-business/")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form Terms URL (Display)</label>
    <type>Text</type>
</CustomField>