order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_VAT_Req_No_Label__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_VAT_Req_No_Label__c</fullName>
    <description>Visible label next to the No radio; blank when the account already holds a Sales Tax Number.</description>
    <formula>IF(ISBLANK(Customer_VAT_Number__c), "No", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form VAT Registered No Label</label>
    <type>Text</type>
</CustomField>