order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_VAT_Req_No_Tag__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_VAT_Req_No_Tag__c</fullName>
    <description>Adobe required radio tag (No) for the VAT-registered signer question - emitted only when the account holds no Sales Tax Number.</description>
    <formula>IF(ISBLANK(Customer_VAT_Number__c), "{{*VAT_Registered_es_:signer1:radio(No)}}", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form VAT Registered No Tag</label>
    <type>Text</type>
</CustomField>