order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_VAT_Req_Yes_Label__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_VAT_Req_Yes_Label__c</fullName>
    <description>Visible label next to the Yes radio; when the account already holds a Sales Tax Number it prints the implicit answer instead.</description>
    <formula>IF(ISBLANK(Customer_VAT_Number__c), "Yes", "Yes (number below)")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form VAT Registered Yes Label</label>
    <type>Text</type>
</CustomField>