order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_VAT_Req_Yes_Tag__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_VAT_Req_Yes_Tag__c</fullName>
    <description>Adobe required radio tag (Yes) for the signer question "Is your organisation registered for VAT / GST / sales tax?" - emitted only when the account holds no Sales Tax Number.</description>
    <formula>IF(ISBLANK(Customer_VAT_Number__c), "{{*VAT_Registered_es_:signer1:radio(Yes)}}", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form VAT Registered Yes Tag</label>
    <type>Text</type>
</CustomField>