order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Form_VAT_Tag__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_VAT_Tag__c</fullName>
    <description>Emits the Adobe signer-fillable VAT text tag ONLY when the account has no Sales Tax Number. Since 2026-08-23 the field is REQUIRED and shown only when the signer answers Yes to the VAT-registered question (showif). When known, the number prints as text and this field is blank.</description>
    <formula>IF(ISBLANK(Customer_VAT_Number__c), "{{*VAT_Number_es_:signer1:showif(VAT_Registered=Yes)}}", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order Form VAT Tag</label>
    <type>Text</type>
</CustomField>