order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Other_Terms_Display__c.field-meta.xml
<CustomField>
    <fullName>Other_Terms_Display__c</fullName>
    <description>Order Form section 8 "Other Terms": flow-stamped copy of Product_Specific_Terms__c (the per-deal product commitments CS/reps already capture, ~7.6% of quotes), or the literal "None" when blank. Stamped by Quote - Stamp Order Form Fields on every save.</description>
    <label>Other Terms (Display)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>