order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <description>Signer's answer to "Does your organisation require a PO number on invoices?" captured from the signed Order Form (Adobe form data). Finance signal: Yes means invoices must carry a PO.</description>
    <label>PO Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>