order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Signatory_Contact__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who signs the Order Form. Leave blank — it fills from the Primary Contact on save. Set it only when someone else signs (a director, GC, procurement).</inlineHelpText>
    <label>Signatory Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Signatory)</relationshipLabel>
    <relationshipName>Quotes_Signatory</relationshipName>
    <type>Lookup</type>
</CustomField>