order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Instructions_Display__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_Display__c</fullName>
    <label>Special Instructions (Display)</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>