order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Terms_Display__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Display__c</fullName>
    <label>Special Terms (Display)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>