order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Terms_Label__c.field-meta.xml
<CustomField>
    <fullName>Terms_Label__c</fullName>
    <description>Stamped by Quote_Stamp_Terms from Order_Form_Terms_Config__mdt (deal owner role). Printed in the Order Form intro.</description>
    <label>Order Form Terms Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>