order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/Terms_URL__c.field-meta.xml
<CustomField>
    <fullName>Terms_URL__c</fullName>
    <description>Stamped by Quote_Stamp_Terms from Order_Form_Terms_Config__mdt (deal owner role). Printed + linked in the Order Form intro.</description>
    <label>Order Form Terms URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>