order-form-v1.2/force-app/main/default/objects/SBQQ__Quote__c/fields/VAT_Registered__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registered__c</fullName>
    <description>Signer's answer to "Is your organisation registered for VAT / GST / sales tax?" captured from the signed Order Form (Adobe form data). No = explicitly not registered (distinct from unknown).</description>
    <label>VAT / Sales Tax Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>